# vercel-content-engineer-case-study

./: .env.example  .gitignore  README.md  agent_compare.py  agent_draft.py  agent_extract.py  comparison_matrix.schema.md  models.py  piece_brief.md  process_notes.md  prompt_context.py  pyproject.toml  roles.json  run.py  shared_rules.md  sources.json  utils.py
outputs/: agent_draft_revision_notes_vercel-workflows-vs-cloudflare-workflows.md  agent_draft_vercel-workflows-vs-cloudflare-workflows.md  comparison_brief_vercel-workflows-vs-cloudflare-workflows.md  comparison_matrix_vercel-workflows-vs-cloudflare-workflows.json  extractions_vercel-workflows-vs-cloudflare-workflows.json  final_draft_vercel-workflows-vs-cloudflare-workflows.md
